# bmprotate

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: benchmark.c  benchmark.h  bitmap.c  bitmap.h  util.c  util.h
